Fixed gaps

--- a/web/style.css
+++ b/web/style.css
@@ -4,7 +4,6 @@
   margin: 0 1% 25px 1%;
   clear: none;
   position: relative;
-  min-height: 100vh
 }
 
 .container .prod .item-img-wrap {
